--- a/project3/main.css
+++ b/project3/main.css
@@ -7,5 +7,23 @@ main {
 }
 main:hover {
     background-color: rgb(218, 56, 28);
-    transition: 3s;
+    transition: 5s;
+}
+button {
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    margin: auto 5px;
+}
+button:hover {
+    border: solid black 1px;
+    transition: 2s;
+}
+#btnhot {
+    background-color: rgb(255, 60, 0);
+}
+#btncold {
+    background-color: rgb(36, 104, 230);
 }
