--- a/project3/main.css
+++ b/project3/main.css
@@ -6,7 +6,6 @@ main {
     transition: 1s;
 }
 main:hover {
-    background-color: rgb(218, 56, 28);
     transition: 5s;
 }
 section {
@@ -46,4 +45,23 @@ input {
 }
 #game {
     display:none;
+}
+#d5 {
+    background-color: rgb(255, 7, 7);
+    border: dashed yellow 3px;
+}
+#d10 {
+    background-color: rgb(224, 78, 42);
+}
+#d20 {
+    background-color: rgb(199, 105, 43);
+}
+#d30 {
+    background-color: rgb(228, 165, 50);
+}
+#d40 {
+    background-color: rgb(36, 145, 235);
+}
+#d50 {
+    background-color: rgb(57, 53, 245);
 }
