--- a/project5/main.css
+++ b/project5/main.css
@@ -9,7 +9,7 @@
     text-align: center;
     border: solid black 2px;
     cursor: pointer;
-    background-color: hsl(250, 60%, 80%);
+    background-color: hsl(54, 39%, 90%);
 }
 #card-image {
     border-radius: 25px;
@@ -22,4 +22,7 @@
     font-size: 15px;
     position: relative;
     top: -20px;
+}
+#flipped {
+    border: solid red 2px;
 }
